<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MashPit</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_line_chart">LineChartActivity</string>
    <string name="drawer_open" translatable="false">Open drawer text</string>
    <string name="drawer_close" translatable="false">Close drawer text</string>
    <string name="prefs_mqtt_title">MQTT Settings</string>
    <string name="prefs_mqtt_broker" translatable="false">MQTT Broker</string>
    <string name="prefs_mqtt_broker_sum" translatable="false">108.61.178.24</string>
    <string name="prefs_mqtt_port" translatable="false">MQTT Port</string>
    <string name="prefs_subs_title">Subscriptions</string>
    <string name="prefs_tempchart_title">Tempchart Title</string>
    <string name="delete_alert">Are you sure to delete all temperature data for this mode?</string>
    <string name="delete_key">DELETE</string>
    <string name="delete_alert_title">Mode</string>
    <string name="prefs_delete_sum">Delete all data for mode: \'</string>
    <string name="prefs_delete_title">Delete all data</string>
    <string name="prefs_mode_category">Settings for temperature mode: \'</string>
    <string name="prefs_proc_title">Mash Process Settings</string>
    <string name="prefs_proc_screen">Keep Screen On</string>
    <string name="settings_title">Settings</string>
    <string name="proc_heat">Heat to\n</string>
    <string name="proc_stop">Stop\n</string>
    <string name="click_back">Please click BACK again to exit</string>
    <string name="chart_24h">24 hours</string>
    <string name="chart_7d">7 days</string>
    <string name="chart_30d">30 days</string>
    <string name="topicchars" translatable="false">/#abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890</string>
    <string name="namechars" translatable="false">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890</string>
    <string name="intervall">Interval:</string>
    <string name="save_events">Save events:</string>
    <string name="remark">Remark:</string>
    <string name="event">Event:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="temperature">Temperature</string>
    <string name="save_events1">Save events</string>
    <string-array name="pref_topic_list_default" />
    <string name="pref_topic_list_title">Topic Selection</string>
    <string name="pref_topic_list_summary">Select topics to display</string>
    <string name="title_activity_find_server">Find MQTT Server</string>
    <string name="MQTTchanged_text">Do you want to reconnect?</string>
    <string name="MQTTchanged_alert_title">MQTT Server changed</string>
    <string name="MQTTchanged_button">Reconnect</string>
    <string name="MQTTchanged_cancel">Cancel</string>
    <string name="pref_del_sum">Delete all temp. data for mode: \'</string>
    <string name="prefs_delete_temp">Delete all temp. data</string>
    <string name="confActive">Active:</string>
    <string name="confTopicTitle">Event:</string>
    <string name="confTopic">Event</string>
    <string name="confTempTitle">Temperature:</string>
    <string name="confTemp">Temp</string>
    <string name="confTimeTitle">Time:</string>
    <string name="confHyst">Hyst</string>
    <string name="confHystTitle">Hysterese:</string>
    <string name="confTime">Time</string>
    <string name="pubConfig">Publish Config</string>
    <string name="pubConfOK">Configuration published!</string>
    <string name="pubConfNOK">Publish failed!</string>
    <string name="confNameTitle">Name:</string>
    <string name="confdelAlert">Do you really want to delete and publish the config "%1$s"?</string>
    <string name="confdelIntervalAlert">Do you really want to delete and publish the "%1$s" sec. Interval for "%2$s"?</string>
    <string name="confPublishAlert">Do you really want to publish the config to the "%1$s" process?</string>
    <string name="menu_configuration">Server configuration</string>
    <string name="menu_settings">App preferences</string>
    <string name="meun_process">Mashing</string>
    <string name="nav_profile">Brewing made easy!</string>
    <string name="prefs_send_mqtt_broker">Send MQTT Broker</string>
    <string name="prefs_send_mqtt_port">Send Broker Port</string>
    <string name="conf_deleted">Config \'%1$s\' deleted!</string>
    <string name="status_connect_OK">Connected to MQTT broker</string>
    <string name="status_connect_NOK">Can\'t connect to MQTT broker</string>
    <string name="menu_title_charts">Temperature Charts</string>
    <string name="menu_temppager">Temperature</string>
    <string name="mqtt_settings_title">MQTT Settings</string>
    <string name="prefs_same_broker">Use a different broker for publishing</string>
    <string name="prefs_mqtt_send_user">Username</string>
    <string name="prefs_mqtt_send_password">Password</string>
    <string name="mpstatServer">Server ID:</string>
    <string name="mpstatProcesses">Processes:</string>
    <string name="mpstatProcActive">Active:</string>
    <string name="mpstatProcNameTitle">Process:</string>
    <string name="mpstatProcStatusTitle">Status:</string>
    <string name="mpstatProcStatus">Process ID:</string>
    <string name="mpstatProcPIDTitle">PID:</string>
    <string name="mpstatProcTypeTitle">Sensor:</string>
    <string name="MPProcActiveYes">&#160;&#160;YES&#160;&#160;&#160;</string>
    <string name="MPProcActiveNo">&#160;&#160;&#160;NO&#160;&#160;&#160;</string>
    <string name="SensorOnline">&#160;&#160;ONLINE&#160;&#160;&#160;</string>
    <string name="SensorOffline">&#160;&#160;&#160;OFFLINE&#160;&#160;&#160;</string>
    <string name="prefs_mqtt_title_pub">MQTT Settings Publish</string>
    <string name="MPProcTypePWR">Power Socket</string>
    <string name="MPProcTypeSSR">Solid State Relais</string>
    <string name="MPProcTypeSVR">Server</string>
    <string name="procfabadddesc">Add a new adapter</string>
    <string name="procfabdelesc">Delete Adapter</string>
    <string name="procfabpowerdesc">New Power Socket</string>
    <string name="procfabssrdesc">New SSR</string>
    <string name="confGPIOTitle">GPIO Port:</string>
    <string name="confIRidTitle">IR ID:</string>
    <string name="confIRcodeTitle">IR Code:</string>
    <string name="confAutostartTitle">Autostart</string>
    <string name="confTopicError">Please enter a topic</string>
    <string name="confNameError">Please enter a name</string>
    <string name="confTempError">Please enter a temperature</string>
    <string name="confTimeError">Please enter a time period</string>
    <string name="confHystError">Please enter a hysterese</string>
    <string name="confNameExistsError">Use a different name. Configuration already exists!</string>
    <string name="confIRidError">Please enter the ID of your power socket</string>
    <string name="confIRcodeError">Please enter the remote code of your power socket</string>
    <string name="confMaxTempMax">Max</string>
    <string name="confMaxTempMin">Min</string>
    <string name="confAliasTitle">Alias Name</string>
    <string name="confUptimeTitle">Uptime</string>
    <string name="uptimeformat">days</string>
    <string name="sensorTypeTitle">Sensor Type:</string>
    <string name="sensorType">Sensor Type</string>
    <string name="sensorSensorsTitle">Sensors:</string>
    <string name="sensorSensors">Sensors</string>
    <string name="sensor_configuration">Sensor Settings</string>
    <string name="devNameTitle">Name:</string>
    <string name="devIntervalTitle">Interval:</string>
    <string name="sensorIdTitle">Sensor ID</string>
    <string name="sensorNameTitle">Name</string>
    <string name="sensorIntervalTitle">Interval</string>
    <string name="sensorActiveTitle">Active</string>
    <string name="sensorIntervalError">Please enter an interval</string>
    <string name="sensorGPIOTitle">GPIO</string>
    <string name="intervaladddesc">Add a new interval</string>
    <string name="devfabadddesc">Create a new sensor device</string>
    <string name="devfabaddNMEdesc">New BME280 device</string>
    <string name="devfabaddDHTdesc">New DHT 11/22 device</string>
    <string name="devGPIOWarning">Enter a valid GPIO-port!</string>
    <string name="devIntervalWarning">Enter a valid interval</string>
    <string name="devGPIOExists">GPIO-port is already used</string>
    <string name="devNotConnected">NOT CONNECTED</string>
    <string name="devBME280">BME280</string>
    <string name="devDHT11" tools:ignore="Typos">DHT11</string>
    <string name="devDS18B20">DS18B20</string>
    <string name="serverSystemTypeTitle">System</string>
    <string name="sensorUptimeTitle">Uptime</string>
    <string name="serverVersionTitle">Version</string>
    <string name="header_select_sensor">Sensor Selection</string>
    <string name="header_select_interval">Interval Selection</string>
    <string name="header_delect_device">Device Selection</string>
    <string name="sub_delete">Delete sensor data</string>
    <string name="sub_delete_text">Do you really want to delete the sensor data?</string>
    <string name="sub_selectSummary">Select sensor data for notifications</string>
    <string name="sub_selectSensorData">Select sensor data</string>
    <string name="sensorSDATitle">SDA</string>
    <string name="sensorSCLTitle">SCL</string>
    <string name="sensorAltitudeTitle">Altitude</string>
    <string name="devSDAExists">SDA port already used!</string>
    <string name="devSCLExists">SCL port already used!</string>
    <string name="devSDAWarning">Please enter the SDA port</string>
    <string name="devSCLWarning">Please enter the SCL port</string>
    <string name="serverIPTitle">IP Address</string>
    <string name="signatureMD5">Firmware image details</string>
    <string name="updateFTPAlert">Do you reeally want to update the sensor device?</string>
    <string name="selectFirmwareImage">Select firmware</string>
    <string name="uploadFirmwareImage">Upload firmware</string>
    <string name="updateFTPTitle">Successfully updated!</string>
    <string name="updateFTPsuccess">Firmware on node: \"%1$s\" was updated successfully!</string>
    <string name="chart_delete">Delete Chart</string>
    <string name="chart_createSummary">Create chart</string>
    <string name="chart_createChart">Create a new chart</string>
    <string name="chartDescTitle">Description:</string>
    <string name="chartNameTitle">Name</string>
    <string name="MD5_error_text_1">ERROR: Storage permission not set!</string>
    <string name="MD5_error_text_2"><![CDATA[\n\nPlease grant storage access permission for this app under \'App info -> Permissions\']]></string>
    <string name="devlist_device_icon">Device icon</string>
    <string name="eventTypeTitle">Event Type</string>
    <string name="eventDirTitle">Direction</string>
    <string name="EventNameTitle">Event Name</string>
    <string name="eventValueTitle">Value</string>
    <string name="EvenRegTitle">Register</string>
    <string name="eventHystTitle">Hysterese</string>
    <string name="new_output_event">New Outbound Event</string>
    <string name="new_input_event">New Inbound Event</string>
    <string name="broker_ca">Broker CA</string>
    <string name="Subchanged_text">The service must be restarted to apply the changes</string>
    <string name="Subchanged_alert_title">Service Restart</string>
    <string name="Subchanged_button">OK, Restart</string>
    <string name="Subchanged_cancel">No, Not Yet</string>
    <string name="NotSaved_title">Warning!</string>
    <string name="NotSaved_text">The configuration was not saved. Do you really want to exit?</string>
    <string name="NotSaved_button">Yes</string>
    <string name="NotSaved_cancel">No</string>
    <string name="chartparams_delete">Do you really want to delete this chart?</string>
    <string name="chart_days">Days</string>
    <string name="chart_months">Months</string>
</resources>