<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_process"
        android:icon="@drawable/ic_meshprocess_bw"
        android:title="@string/meun_process" />
    <item
        android:id="@+id/nav_temppager"
        android:icon="@drawable/ic_thermometer"
        android:title="@string/menu_temppager" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_menu_settings"
        android:title="@string/menu_settings" />
    <item
        android:id="@+id/nav_config"
        android:icon="@drawable/ic_server_bw"
        android:title="@string/menu_configuration" />
    <item
        android:id="@+id/nav_sensorconfig"
        android:icon="@drawable/ic_server_bw"
        android:title="@string/sensor_configuration" />
</group>
</menu>
