<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:icon="@drawable/ic_launcher"
    android:key="subs_screen"
    android:persistent="false"
    android:title="Subscreen">

        <PreferenceCategory android:title="@string/prefs_mqtt_title">
            <CheckBoxPreference
                android:key="broker_same"
                android:title="@string/prefs_same_broker"
                android:defaultValue="false"/>
            <com.holger.mashpit.prefs.SettingsEdit
                android:dependency="broker_same"
                android:key="send_mashpit_domain"
                android:title="MashPit Domain" />
            <com.holger.mashpit.prefs.SettingsEdit
                android:dependency="broker_same"
                android:key="broker_url"
                android:title="@string/prefs_mqtt_broker"
                android:summary="@string/prefs_mqtt_broker_sum"
                android:defaultValue="192.168.1.20"/>
            <com.holger.mashpit.prefs.SettingsEdit
                android:dependency="broker_same"
                android:key="broker_port"
                android:title="@string/prefs_mqtt_port"
                android:summary="1883"
                android:inputType="number"
                android:digits="0123456789"
                android:defaultValue="1883"/>
            <com.holger.mashpit.prefs.SettingsEdit
                android:dependency="broker_same"
                android:title="@string/prefs_mqtt_send_user"
                android:key="send_broker_user"
                android:defaultValue=""/>
            <EditTextPreference
                android:dependency="broker_same"
                android:title="@string/prefs_mqtt_send_password"
                android:key="send_broker_password"
                android:inputType="textPassword" />
        </PreferenceCategory>
</PreferenceScreen>
