<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:icon="@drawable/ic_launcher"
    android:key="subs_screen"
    android:persistent="false"
    android:title="Subscreen">

        <PreferenceCategory android:title="@string/prefs_proc_title">
            <CheckBoxPreference
                android:key="ScreenOn"
                android:title="@string/prefs_proc_screen"
                android:defaultValue="false"/>
    <com.holger.mashpit.prefs.TopicListPreference
        android:defaultValue="@array/pref_topic_list_default"
        android:summary="@string/pref_topic_list_summary"
        android:title="@string/pref_topic_list_title"
        android:key="process_topics"/>
        </PreferenceCategory>
</PreferenceScreen>