<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:icon="@drawable/ic_launcher"
    android:key="subs_screen"
    android:persistent="false"
    android:title="Subscreen">
    <EditTextPreference
        android:key="mashpit_domain"
        android:title="MashPit Domain"
        app:iconSpaceReserved="false" />
    <EditTextPreference
        android:defaultValue="192.168.1.20"
        android:key="broker_url"
        android:summary="@string/prefs_mqtt_broker_sum"
        android:title="@string/prefs_mqtt_broker"
        app:iconSpaceReserved="false" />
    <EditTextPreference
        android:defaultValue="1883"
        android:digits="0123456789"
        android:inputType="number"
        android:key="broker_port"
        android:summary="1883"
        android:title="@string/prefs_mqtt_port"
        app:iconSpaceReserved="false" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="broker_ssl"
        android:title="Secure connection"
        app:iconSpaceReserved="false" />
    <EditTextPreference
        android:key="broker_user"
        android:title="@string/prefs_mqtt_send_user"
        app:iconSpaceReserved="false" />
    <EditTextPreference
        android:inputType="textPassword"
        android:key="broker_password"
        android:title="@string/prefs_mqtt_send_password"
        app:iconSpaceReserved="false" />
</PreferenceScreen>
