<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/confcard_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/confConf"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/cardview_dark_background"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@android:color/white" />

        <Switch
            android:id="@+id/confActive"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/confConf"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="150dp"
            android:gravity="left"
            android:text="Active"
            android:textSize="@dimen/abc_text_size_medium_material"
            tools:checked="true" />

        <TextView
            android:id="@+id/confTopicTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/confActive"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/confTopicTitle"
            android:textSize="@dimen/abc_text_size_medium_material" />

        <TextView
            android:id="@+id/confTopic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/confTopicTitle"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="10dp"
            android:text="@string/confTopic"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/confTempTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/confTopicTitle"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/confTempTitle"
            android:textSize="@dimen/abc_text_size_medium_material" />

        <TextView
            android:id="@+id/confTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/confTempTitle"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="5dp"
            android:text="@string/confTemp"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/confTimeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/confTempTitle"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/confTimeTitle"
            android:textSize="@dimen/abc_text_size_medium_material" />

        <TextView
            android:id="@+id/confTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/confTimeTitle"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="5dp"
            android:text="@string/confTime"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/confHystTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/confTimeTitle"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/confHystTitle"
            android:textSize="@dimen/abc_text_size_medium_material" />

        <TextView
            android:id="@+id/confHyst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/confHystTitle"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="5dp"
            android:text="@string/confHyst"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:textStyle="bold" />

    </RelativeLayout>
    </android.support.v7.widget.CardView>