<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.holger.mashpit.ConfEdit">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/confedit_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:navigationIcon="?attr/homeAsUpIndicator" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/confedit_toolbar"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginRight="5dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confNameField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/confNameTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/confTopicField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/confTopicTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confTopic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/topicchars" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confGPIOField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/confGPIOTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:digits="0123456789"
                android:inputType="number"
                android:id="@+id/confGPIO"
                android:layout_width="150dp"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/confTempField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/confTempTitle"
                app:counterEnabled="false"
                app:counterMaxLength="2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confTemp"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:digits="-.0123456789"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <Switch
                android:id="@+id/confMaxTemp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="10dp"
                android:showText="true"
                android:textOff="@string/confMaxTempMin"
                android:textOn="@string/confMaxTempMax"
                android:theme="@style/TempMinMax" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/confTimeField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/confTimeTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confTime"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/confHystField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/confHystTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confHyst"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <Switch
            android:id="@+id/confActive"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="200dp"
            android:layout_marginRight="200dp"
            android:text="@string/confAutostartTitle"
            android:textSize="18sp"
            tools:checked="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/canceldelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        fab:layout_anchor="@id/editButton"
        fab:layout_anchorGravity="top|center_horizontal">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            fab:srcCompat="@drawable/ic_delete_white_24dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_cancel_white_24dp" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/procfabadddesc"
        android:src="@drawable/ic_done_white_24dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>