<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.MaterialComponents.CardView"
    android:id="@+id/sensorstatuscard_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:layout_marginLeft="@dimen/mtrl_card_spacing"
    android:layout_marginTop="@dimen/mtrl_card_spacing"
    android:layout_marginRight="@dimen/mtrl_card_spacing"
    android:foreground="?android:attr/selectableItemBackground"
    android:minHeight="115dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/sensorServerTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:text="@string/mpstatServer"/>

            <TextView
                android:id="@+id/sensorServer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:layout_marginTop="10dp"
                android:text="@string/mpstatServer"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sensorSensorTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:text="@string/sensorSensorsTitle"/>

            <TextView
                android:id="@+id/sensorSensor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:layout_marginTop="10dp"
                android:text="@string/sensorSensors"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/sensorStatusTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:text="@string/mpstatProcStatusTitle"/>

            <TextView
                android:id="@+id/sensorStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:text="@string/mpstatProcStatusTitle"/>
        </RelativeLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
